--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Task Schedular",
-  "name": "Task Schedular",
+  "short_name": "Task Scheduler",
+  "name": "Task Scheduler",
   "icons": [
     {
       "src": "favicon.ico",
