--- a/package.json
+++ b/package.json
@@ -18,20 +18,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
+    "@node-rs/argon2": "^2.0.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
-    "@tanstack/react-router": "^1.132.0",
+    "@tanstack/react-router": "^1.159.5",
     "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/router-plugin": "^1.132.0",
+    "@tanstack/react-router-ssr-query": "^1.159.5",
+    "@tanstack/react-start": "^1.159.5",
+    "@tanstack/router-plugin": "^1.159.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.9",
     "drizzle-orm": "^0.45.0",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
+    "lucia": "^3.2.2",
     "lucide-react": "^0.561.0",
     "next-themes": "^0.4.6",
     "nitro": "npm:nitro-nightly@latest",
@@ -44,7 +49,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
-    "vite-tsconfig-paths": "^6.0.2"
+    "vite-tsconfig-paths": "^6.0.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
