removed argon hashing and added bcrypt

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "@node-rs/argon2": "^2.0.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
@@ -29,6 +28,7 @@
     "@tanstack/react-router-ssr-query": "^1.159.5",
     "@tanstack/react-start": "^1.159.5",
     "@tanstack/router-plugin": "^1.159.5",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
