--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-tanstack-start": "^1.2.9",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
